syntax = "proto3";

package com.pipsap.stockprice;

option java_multiple_files = true;
option java_package = "com.pipsap.stockprice.proto";

// Service definition for stock price updates
service StockPriceService {
  // Stream real-time price updates for requested symbols
  // Server streaming call 
  rpc StreamPrices(PriceRequest) returns (stream PriceUpdate) {}
  
  // Get current price for specific symbols
  // Unary call
  rpc GetCurrentPrice(PriceRequest) returns (PriceResponse) {}
}

// Request message for price updates
message PriceRequest {
  repeated string symbols = 1;  // List of stock symbols to get prices for
}

// Response message containing current prices
message PriceResponse {
  map<string, PriceUpdate> prices = 1;  // Map of symbol to price update
}

// Message containing price update information
message PriceUpdate {
  string symbol = 1;           // Stock symbol
  double price = 2;            // Current price
  int64 timestamp = 3;         // Unix timestamp
  string source = 4;           // Source of the price update (API if this is being called)
}

